# Sabita

./: .rusty-hook.toml  Cargo.toml  LICENSE.md  Makefile.toml  README.md  install.sh  rusty-hook.toml  sudoku.example  task.config.json  tmux-workspace.sh
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test-lint-audit.yml
benches/: criterion.rs  perfos.rs
benchmarks/: v0.1.0.benchmark  v0.2.0.benchmark  v0.3.0.benchmark  v0.4.0.benchmark  v0.5.3.benchmark
src/: lib.rs  main.rs
src/assets/: full_grid.rs  mod.rs
src/core/: bench.rs  benchmark.rs  cli.rs  constants.rs  file.rs  generator.rs  grid.rs  mod.rs  solver.rs  validation.rs
src/core/benchmark/: bench.rs  config.rs  console_ui.rs  file.rs  histogram.rs  message_handler.rs  mod.rs  runner.rs  time_utils.rs
src/utils/: grid_utils.rs
tasks/: v0.1.0.json  v0.2.0.json  v0.3.0.json
tests/: generator.rs  grid.rs  main.rs  solver.rs  tests.rs
tests/generate/: mod.rs  permute_values.rs
tests/solver/: get_box_solutions.rs  mod.rs  solver_e2e.rs
tests/validation/: mod.rs  validate_new_box.rs
