[package]
name = "sabita"
description = "Sabita is a Sudoku solver / generator made with Rust"
version = "0.5.1"
authors = ["Mike AUBENAS"]
edition = "2021"
readme = "README.md"
rust-version = "1.83.0"
repository = "https://github.com/MikyStar/Sabita"
license = "MIT"

[features]
benchmark = ["dep:perfos"]

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
perfos = { version = "0.3.0", optional = true }
rand = "0.9.0"
