[package]
name = "sabita"
description = "Sabita is a Sudoku solver / generator made with Rust"
version = "0.5.3"
authors = ["Mike AUBENAS"]
edition = "2021"
readme = "README.md"
rust-version = "1.83.0"
repository = "https://github.com/MikyStar/Sabita"
license = "MIT"

[[bench]]
name = "perfos"
path = "benches/perfos.rs"
harness = false

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = true

####################

[dev-dependencies]
rusty-hook = "^0.11.2"
perfos = "0.4.0"

[dependencies]
rand = "0.9.0"
